--- a/src/index.scss
+++ b/src/index.scss
@@ -16,8 +16,11 @@ body {
   font-size: 1rem;
   overflow-x: hidden;
   background: $light-grey;
+}
 
-
+h6 {
+  color: grey;
+  font-weight: bold;
 }
 
 p {
